--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# Data folders
-Data/*
-MNIST_exo/*
-olivier/*
-models/*
-
 # PyCharm files
 .idea*
 
@@ -111,4 +105,4 @@ ENV/
 .mypy_cache/
 
 # Data
-
+Data/SpeedDating.csv
